# 10-herencia-polim-salario-nima

./: CMakeLists.txt  Mermaid  Mermaid Imagen
src/: main.cpp
src/model/: Empleado.cpp  Empleado.h  Junior.cpp  Junior.h  Senior.cpp  Senior.h  Tecnico.cpp  Tecnico.h  Tester.cpp  Tester.h
src/view/: View.cpp  View.h
